--- a/server/Gemfile
+++ b/server/Gemfile
@@ -18,6 +18,9 @@ gem 'rack-cors'
 
 gem 'jsonapi-serializer'
 
+# to access pokemon api
+gem 'pokemon_tcg_sdk'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
