--- a/server/Gemfile
+++ b/server/Gemfile
@@ -21,6 +21,9 @@ gem 'jsonapi-serializer'
 # to access pokemon api
 gem 'pokemon_tcg_sdk'
 
+# for paginiate
+gem 'kaminari'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
