--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.0",
-    "typescript": "~3.7.2"
+    "typescript": "^3.8.0"
   },
   "scripts": {
     "start": "PORT=8080 react-scripts start",
