Remove Pokemon TCG SDK Gem Use HTTP Party Gem
Remove the Pokemon TCG SDK gem because it is not working as expected.
Getting too many cards from the Pokemon TCG API, instead, use the HTTP
Party gem and access the API directly.

---
Ref:

https://github.com/jnunemaker/httparty

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -18,8 +18,7 @@ gem 'rack-cors'
 
 gem 'jsonapi-serializer'
 
-# to access pokemon api
-gem 'pokemon_tcg_sdk'
+gem 'httparty'
 
 # for paginiate
 gem 'kaminari'
